# Computer-Graphics

./: .gitignore  Readme.md
Proyecto/: CMakeLists.txt  ConstruyeLaberinto.py  Laberith.py  Laberith.stl  Test.py  build_Cubes.py  cube.stl  intento_camino.py  recorrido.py
Proyecto/lib/: CMakeLists.txt
Proyecto/lib/Laberith/: BaseApplication.cxx  BaseApplication.h  BaseApplication_VTK.cxx  CMakeLists.txt  CameraMan.cxx  CameraMan.h
Proyecto/python_files/: Laberith.stl  build_Laberith.py  generate_levels.sh  stl_to_obj.py  test.stl  viz_obj.py
Proyecto/src/: CMakeLists.txt
Proyecto/src/LevelOne/: CMakeLists.txt  LevelOne.cxx
Proyecto/src/LevelOne/resources/: CMakeLists.txt  cube.vtp  material.material  materials.material  sphere0.vtp
Proyecto/src/LevelTwo/: CMakeLists.txt  LevelTwo.cxx  LevelZero.cxx
Proyecto/src/LevelTwo/resources/: CMakeLists.txt  material.material
Proyecto/src/LevelZero/: CMakeLists.txt  LevelZero.cxx
Proyecto/src/LevelZero/resources/: disk.stl  material.material  table.stl
Proyecto/tools/: CMakeLists.txt  ConvertVTKToMesh.cxx
Proyecto/tools/ConvertVTKToMesh/: Application.cxx  Application.h  CMakeLists.txt  main.cxx
Taller 1/: Generating.py  Readme.md  User_manual.md  generation_image.cpp
Taller 2/: Ball_Dynamics.cpp  Makefile  Readme.md  User_manual.md
Taller 5/: DijkstraOnVTKImage.py  Readme.md  dijkstra_clase.py  image_viz.py
Taller3/: CMakeLists.txt  Readme.md  example_read_json.cpp  my_solar_system.cpp  my_solar_system_linux.cpp  my_solar_system_mac.cpp  planets.json  simple.json  solar_system_template.cpp
Taller4/: CMakeLists.txt  Readme.md  Stickman.json
Taller4/app/: CMakeLists.txt  RoboticArm.cxx  Stickman.cxx
Taller4/lib/: CMakeLists.txt
Taller4/lib/PUJ_CGraf/: AmbientLight.cxx  AmbientLight.h  Camera.cxx  Camera.h  Controller.cxx  Controller.h  Cylinder.cxx  Cylinder.h  Light.cxx  Light.h  Object.cxx  Object.h  PPMImage.cxx  PPMImage.h  ParametricObject.cxx  ParametricObject.h  Plane.cxx  Plane.h  Sphere.cxx  Sphere.h  SphericalCamera.cxx  SphericalCamera.h  SpotLight.cxx  SpotLight.h  World.cxx  World.h
